# aoc2023

./: .gitattributes
day1/: README.md  bun.lockb  index.ts
day10/: Cargo.toml  README.md  notes.md  output-enclosed.txt  output.txt
day10/src/: main.rs
day11/: Cargo.toml  README.md
day11/src/: main.rs
day12/: Cargo.toml  README.md
day12/src/: main.rs
day13/: Cargo.toml  README.md
day13/src/: main.rs
day14/: Cargo.toml  README.md
day14/src/: main.rs
day15/: Cargo.toml  README.md
day15/src/: main.rs
day2/: README.md  bun.lockb  index.ts
day3/: README.md  bun.lockb  gpt4.html  index.ts  package.json
day4/: README.md
day4/src/: main.rs
day5/: Cargo.toml  README.md  index.html
day5/src/: day5.rs  lib.rs  main.rs  main_wrong.rs
day6/: README.md
day6/src/: main.rs
day7/: README.md
day7/src/: main.rs  main_reddit.rs
day8/: README.md
day8/src/: main.rs
day9/: README.md  chatGPT4.txt
day9/src/: main.rs
